--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
-<h1>Hello World</h1>
+<!doctype html>
 
-<p> My name is Jodie </p>
+<html>
+
+
+<head>
+
+<meta charset="utf-8">
+
+
+</head>
+
+<body>
+    
+        <h1>Hello World</h1>
+
+        <p> My name is Jodie </p>
+
+</body>
+
+
+</html>
+
+
+
+
 
 
 
