--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
 <meta charset="utf-8">
 
+<title> Great travel deals from Time to Travel</title>
+
+<meta name="description" content="Exclusive boutique holidays and travel deals from all over Australia">
 
 </head>
 
