--- a/index.html
+++ b/index.html
@@ -5,38 +5,49 @@
 
 <head>
 
-<meta charset="utf-8">
+    <meta charset="utf-8">
 
-<title> Great travel deals from Time to Travel</title>
+    <title> Great travel deals from Time to Travel</title>
 
-<meta name="description" content="Exclusive boutique holidays and travel deals from all over Australia">
+    <meta name="description" content="Exclusive boutique holidays and travel deals from all over Australia">
 
 </head>
 
 <body>
-    
-        <h1>Hello World</h1>
 
-        <p> My name is Jodie </p>
+
+    <header>
+        <div class=layout-wide>
+            <div class="logo wrapper">
+                
+                <a href="index.html">
+                    <img src="resources/images/logo.svg" alt="Time to Travel logo">
+
+                </a>
+
+
+
+
+        </div>
+
+
+
+
+        </div>
+
+    </header>
+
+    <Main>
+        <h1>Hello World</h1>
+    </Main>
+
+    <footer>
+
+
+    </footer>
+    <p> My name is Jodie </p>
 
 </body>
 
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
