--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
                     <img src="resources/images/logo.svg" alt="Time to Travel logo">
 
                 </a>
+                </div> <!--these are the divs for logo wrapper-->
 
-
-
-
-        </div>
-
-
+            <div class="site-title">
+                Time to Travel
+            </div>
 
 
         </div>
