added H1 for SEO
This is our SEO tag what the website is about

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
 
     <Main>
-        <h1>Hello World</h1>
+        <h1>Time to Travel</h1> <!--This is our SEO tag what the website is about -->
     </Main>
 
     <footer>
