--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
     </Main>
 
     <footer>
+        <div class="footer-subscribe">
+            <div class="Layout-wide"
 
+
+        </div>
 
     </footer>
     <p> My name is Jodie </p>
