--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 
     <footer>
         <div class="footer-subscribe">
-            <div class="Layout-wide"
+            <div class="Layout-wide">
+                 <!--to do subscription goes here--></div>
+            </div>
+
+           
 
 
         </div>
