using html refs
to give sumbols in html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                  <!--to do subscription goes here--></div>
             </div>
 
-           
+        <div class="Layout-wide">
+            <p> &copy; 2019 Time to Travel PTY LTD</p>
+        </div>
 
 
         </div>
