--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <title> Great travel deals from Time to Travel</title>
 
-<link rel="stylesheet" href="resources/css/reset.css">
+<link rel="stylesheet" href="resources/css/normalize.css">
+
 
     <meta name="description" content="Exclusive boutique holidays and travel deals from all over Australia">
 
