--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <link rel="stylesheet" href="resources/css/normalize.css">
 
+<link rel="Stylesheet" href="resources/css/main.css"
 
     <meta name="description" content="Exclusive boutique holidays and travel deals from all over Australia">
 
