--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <link rel="stylesheet" href="resources/css/normalize.css">
 
-<link rel="Stylesheet" href="resources/css/main.css"
+<link rel="Stylesheet" href="resources/css/main.css">
 
     <meta name="description" content="Exclusive boutique holidays and travel deals from all over Australia">
 
@@ -22,7 +22,7 @@
 
     <header>
         <div class=layout-wide>
-            <div class="logo wrapper">
+            <div class="logo-wrapper">
 
                 <a href="index.html">
                     <img src="resources/images/logo.svg" alt="Time to Travel logo">
