--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <head>
 
     <meta charset="utf-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <title> Great travel deals from Time to Travel</title>
 
 <link rel="stylesheet" href="resources/css/normalize.css">
