footer styles and buttons
Needs to be corrected as not working as wanted.
Codes creating shape of button to brief.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <title> Great travel deals from Time to Travel</title>
 
 <link rel="stylesheet" href="resources/css/normalize.css">
@@ -335,7 +335,7 @@
 
     <footer>
         <div class="footer-subscribe">
-            <div class="Layout-wide">
+            <div class="layout-wide">
                 <!-- Begin Mailchimp Signup Form -->
                 
                     }
@@ -378,7 +378,7 @@
             </div>
         </div>
 
-        <div class="Layout-wide">
+        <div class="layout-wide">
             <p> &copy; 2019 Time to Travel PTY LTD</p>
         </div>
 
