aria-exp="false">
aria-exp="false"> this means that at this point the navigation is closed. This is specific for usability - we can see if the nav is open or shut but a blind person doesn't - t

--- a/index.html
+++ b/index.html
@@ -41,6 +41,28 @@
 
     </header>
 
+<div class="navigation">
+
+
+        <button class="nav-prompt"> Open Navigation </button>
+
+
+<nav class="layout-wide nav-inner" aria-exp="false">  
+
+
+</nav>
+
+
+
+</div>
+
+
+
+
+
+
+
+
     <Main>
         <section class="layout-wide">
             <h1>Site elements</h1>
