--- a/index.html
+++ b/index.html
@@ -48,7 +48,37 @@
 
 
 <nav class="layout-wide nav-inner" aria-exp="false">  
+        <ul>
+            <li> 
+                <a href="ïndex.html">
+                    Home
+                </a>
+            </li>
 
+            <li> 
+                <a href="aboutus.html">
+                    About Us
+                </a>
+            </li>
+
+            <li> 
+                <a href="media.html">
+                    Media
+                </a>
+            </li>
+
+            <li> 
+                <a href="contact.html">
+                    Contact
+                </a>
+            </li>
+
+            <li> 
+                <a href="elements.html">
+                    Elements
+                </a>
+            </li>
+        </ul>
 
 </nav>
 
