--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 <div class="navigation">
 
 
-        <button class="nav-prompt"> Open Navigation </button>
+        <button class="nav-prompt"> Start Juggling Now! </button>
 
 
-<nav class="layout-wide nav-inner" aria-exp="false">  
+<nav class="layout-wide nav-inner" aria-expanded="false">  
         <ul>
             <li> 
                 <a href="ïndex.html">
@@ -56,26 +56,26 @@
             </li>
 
             <li> 
-                <a href="aboutus.html">
-                    About Us
+                <a href="balls.html">
+                    Balls
                 </a>
             </li>
 
             <li> 
-                <a href="media.html">
-                    Media
+                <a href="clubs.html">
+                    CLubs
+                </a>
+            </li>
+
+            <li> 
+                <a href="unicycling.html">
+                    Unicycling
                 </a>
             </li>
 
             <li> 
                 <a href="contact.html">
                     Contact
-                </a>
-            </li>
-
-            <li> 
-                <a href="elements.html">
-                    Elements
                 </a>
             </li>
         </ul>
