--- a/elements.html
+++ b/elements.html
@@ -1,20 +1,21 @@
 <!doctype html>
-
 <html>
-
 
 <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title> Great travel deals from Time to Travel</title>
+    <title>Great travel deals from Time To Travel</title>
 
     <link rel="stylesheet" href="resources/css/normalize.css">
 
-    <link rel="Stylesheet" href="resources/css/main.css">
+    <link rel="stylesheet" href="resources/css/main.css">
 
-    <meta name="description" content="Exclusive boutique holidays, cruises and tours from Australia's leading travel agent"> <!--change this to describe our website circus caravan-->
+    <meta name="description"
+        content="Exclusive boutique holidays, cruises and tours form Australia's leading travel agent">
+
+
 
     <link rel="apple-touch-icon" sizes="180x180" href="resources/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
@@ -25,28 +26,30 @@
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="msapplication-config" content="resources/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
-<!--all of this puts the plane icon on the tab -->
+
+
+
 
 </head>
 
+
 <body>
 
-
     <header>
-        <div class=layout-wide>
+
+        <div class="layout-wide">
+
             <div class="logo-wrapper">
 
                 <a href="index.html">
-                    <img src="resources/images/logo.svg" alt="Time to Travel logo">
+                    <img src="resources/images/logo.svg" alt="Time To Travel logo">
 
                 </a>
-            </div>
-            <!--these are the divs for logo wrapper-->
+            </div><!-- logo-wrapper -->
 
             <div class="site-title">
-                Time to Travel
+                Time To Travel
             </div>
-
 
         </div>
 
@@ -54,58 +57,48 @@
 
     <div class="navigation">
 
-
-        <button class="nav-prompt"> Start Juggling Now! </button>
-
+        <button class="nav-prompt">Open Navigation</button>
 
         <nav class="layout-wide nav-inner" aria-expanded="false">
+
             <ul>
-               
+
                 <li>
-                    <a href="balls.html">
-                        Balls
+                    <a href="index.html">
+                        Home
                     </a>
                 </li>
 
                 <li>
-                    <a href="clubs.html">
-                        CLubs
+                    <a href="about.html">
+                        About Us
                     </a>
                 </li>
 
                 <li>
-                    <a href="unicycling.html">
-                        Unicycling
+                    <a href="media.html">
+                        Media
                     </a>
                 </li>
 
                 <li>
                     <a href="contact.html">
-                        Contact Spike and Jodie
+                        Contact
                     </a>
                 </li>
+
                 <li>
-                    <a href="ïndex.html">
-                        Join Circus Caravan
+                    <a href="elements.html">
+                        Elements
                     </a>
                 </li>
-                
             </ul>
 
         </nav>
-
-
-
     </div>
 
+    <main>
 
-
-
-
-
-
-
-    <Main>
         <section class="layout-wide">
             <h1>Site elements</h1>
 
@@ -419,19 +412,24 @@
 
         </section>
 
-    </Main>
+
+
+
+
+
+    </main>
 
     <footer>
+
         <div class="footer-subscribe">
+
             <div class="layout-wide">
+
                 <!-- Begin Mailchimp Signup Form -->
-
-
-
 
                 <div id="mc_embed_signup">
                     <form
-                        action="https://google.us20.list-manage.com/subscribe/post?u=99bb505fc8926f30547cd1678&amp;id=82a749c5d1"
+                        action="https://github.us18.list-manage.com/subscribe/post?u=726a6baed27f30e74082dbbb5&amp;id=44ea740b9d"
                         method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
                         target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
@@ -452,7 +450,7 @@
                             </div>
                             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                                    name="b_99bb505fc8926f30547cd1678_82a749c5d1" tabindex="-1" value=""></div>
+                                    name="b_726a6baed27f30e74082dbbb5_44ea740b9d" tabindex="-1" value=""></div>
                             <div class="clear"><input type="submit" value="Subscribe" name="subscribe"
                                     id="mc-embedded-subscribe" class="button"></div>
                         </div>
@@ -463,35 +461,28 @@
                 <script
                     type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
                 <!--End mc_embed_signup-->
+
+
             </div>
+
         </div>
 
         <div class="footer-notices">
 
             <div class="layout-wide">
-                <p> &copy; 2019 Time to Travel PTY LTD</p>
+                <p>&copy; 2019 Time To Travel PTY LTD</p>
             </div>
-
         </div>
 
-
     </footer>
+
 
     <script src="resources/js/css-var-polyfill.js"></script>
 
     <script src="resources/js/jquery.js"></script>
 
-
     <script src="resources/js/scripts.js"></script>
 
-
-
-
-
-
-    <p> My name is Jodie Oh!</p>
-
 </body>
-
 
 </html>
