--- a/media.html
+++ b/media.html
@@ -99,19 +99,81 @@
 
     <main>
 
-      <div class="hero-module">
+        <div class="hero-module">
 
-        <img src="resources/images/new-york-wide-1500.jpg  " alt="Picture of New york from above">
+            <video muted autoplay loop src="resources/video/new-york.mp4">
 
-        <div class="hero-content">
+                Your browser does not support video
 
-            <h1 class="heading-main layout-wide">
-                Media
-            </h1>
+            </video>
+
+            <div class="hero-content">
+
+                <h1 class="heading-main layout-wide">
+                    Media
+
+            </div>
 
         </div>
 
-      </div>
+        <section class="layout-wide">
+
+            <h2> Audio </h2>
+
+            <audio controls src="resources/audio/bensound-happyrock.mp3">
+            </audio>
+
+        </section>
+
+        <section class="layout-wide">
+
+            <div class="ïmage-gallery">
+                <ul>
+                    <li>
+                        <a href="resources/galleries/new-york-01.jpg">
+                            <img src="resources/galleries/new-york-01-thumb.jpg" alt="new-york">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="resources/galleries/new-york-02.jpg">
+                            <img src="resources/galleries/new-york-02-thumb.jpg" alt="new-york">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="resources/galleries/new-york-03.jpg">
+                            <img src="resources/galleries/new-york-03-thumb.jpg" alt="new-york">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="resources/galleries/new-york-04.jpg">
+                            <img src="resources/galleries/new-york-04-thumb.jpg" alt="new-york">
+                        </a>
+                    </li>
+                </ul>
+                <li>
+                    <a href="resources/galleries/new-york-05.jpg">
+                        <img src="resources/galleries/new-york-05-thumb.jpg" alt="new-york">
+                    </a>
+                </li>
+                <li>
+                    <a href="resources/galleries/new-york-06.jpg">
+                        <img src="resources/galleries/new-york-06-thumb.jpg" alt="new-york">
+                    </a>
+                </li>
+                <li>
+                    <a href="resources/galleries/new-york-07.jpg">
+                        <img src="resources/galleries/new-york-07-thumb.jpg" alt="new-york">
+                    </a>
+                </li>
+                <li>
+                    <a href="resources/galleries/new-york-08-thumb.jpg">
+                        <img src="resources/galleries/new-york-08-thumb.jpg" alt="new-york">
+                    </a>
+            </div>
+
+
+        </section>
+
 
     </main>
 
