contact us page
adding address and email tags so that people who can't see can still see the email.

--- a/contact.html
+++ b/contact.html
@@ -99,19 +99,48 @@
 
     <main>
 
-      <div class="hero-module">
+        <div class="hero-module">
 
-        <img src="resources/images/thailand-wide-1500.jpg" alt="Picture of Thailand">
+            <img src="resources/images/thailand-wide-1500.jpg" alt="Picture of Thailand">
 
-        <div class="hero-content">
+            <div class="hero-content">
 
-            <h1 class="heading-main layout-wide">
-                Contact Us 
-            </h1>
+                <h1>Contact Us </h1>
+
+
+            </div>
 
         </div>
 
-      </div>
+        <section class="layout-wide">
+
+            <h2> Drop and say hi</h2>
+
+            <div class="content-area-grid">
+                <div class="content">
+                    <h3>Drop in and see us!</h3>
+                    <p> We are located at <address>321 Street St Suburb NSW 1234, </address>
+                    </p>
+                    <p> Email us at <a href="mailto:email@email.com">email@email.com</a> </p>
+                    <p> Give us a call on 12435678 </p>
+                    <p> or you can SMS us at 12345678</p>
+
+
+                </div>
+
+
+
+
+
+
+        </section>
+
+
+
+
+
+
+
 
     </main>
 
