--- a/media.html
+++ b/media.html
@@ -10,6 +10,10 @@
 
     <link rel="stylesheet" href="resources/css/normalize.css">
 
+    <!--only doing this on media page as it the one with photogallery and needs the plugin to work. -->
+
+    <link rel="stylesheet" href="resources/css/simpleLightbox.min.css">
+
     <link rel="stylesheet" href="resources/css/main.css">
 
     <meta name="description"
@@ -127,7 +131,7 @@
 
         <section class="layout-wide">
 
-            <div class="ïmage-gallery">
+            <div class="image-gallery">
                 <ul>
                     <li>
                         <a href="resources/galleries/new-york-01.jpg">
@@ -149,26 +153,29 @@
                             <img src="resources/galleries/new-york-04-thumb.jpg" alt="new-york">
                         </a>
                     </li>
+
+                    <li>
+                        <a href="resources/galleries/new-york-05.jpg">
+                            <img src="resources/galleries/new-york-05-thumb.jpg" alt="new-york">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="resources/galleries/new-york-06.jpg">
+                            <img src="resources/galleries/new-york-06-thumb.jpg" alt="new-york">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="resources/galleries/new-york-07.jpg">
+                            <img src="resources/galleries/new-york-07-thumb.jpg" alt="new-york">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="resources/galleries/new-york-08.jpg">
+                            <img src="resources/galleries/new-york-08-thumb.jpg" alt="new-york">
+                        </a>
+                    </li>
+
                 </ul>
-                <li>
-                    <a href="resources/galleries/new-york-05.jpg">
-                        <img src="resources/galleries/new-york-05-thumb.jpg" alt="new-york">
-                    </a>
-                </li>
-                <li>
-                    <a href="resources/galleries/new-york-06.jpg">
-                        <img src="resources/galleries/new-york-06-thumb.jpg" alt="new-york">
-                    </a>
-                </li>
-                <li>
-                    <a href="resources/galleries/new-york-07.jpg">
-                        <img src="resources/galleries/new-york-07-thumb.jpg" alt="new-york">
-                    </a>
-                </li>
-                <li>
-                    <a href="resources/galleries/new-york-08-thumb.jpg">
-                        <img src="resources/galleries/new-york-08-thumb.jpg" alt="new-york">
-                    </a>
             </div>
 
 
@@ -239,7 +246,11 @@
 
     <script src="resources/js/jquery.js"></script>
 
+    <script src="resources/js/simpleLightbox.min.js"></script>
+
     <script src="resources/js/scripts.js"></script>
+
+
 
 </body>
 
