--- a/contact.html
+++ b/contact.html
@@ -122,16 +122,22 @@
                     <p> We are located at <address>321 Street St Suburb NSW 1234, </address>
                     </p>
                     <p> Email us at <a href="mailto:email@email.com">email@email.com</a> </p>
-                    <p> Give us a call on 12435678 </p>
-                    <p> or you can SMS us at 12345678</p>
+                    <p> Give us a call on <a href="tel:12345678"> 12435678 </a></p>
+                    <p> or you can SMS us at <a href="sms:12345678">12345678</a></p>
+
 
 
                 </div>
 
+                <div class="content">
+
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12611.152562346542!2d144.9499129!3d-37.7950045!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x78d62be74fa1690e!2sThe+Larwill+Studio!5e0!3m2!1sen!2sau!4v1550382185627"
+                        width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
 
 
-
-
+</div>
 
         </section>
 
